src/test/deca/syntax/valid/Objet/ListClasses-ASM.deca
// Description:
//      Syntaxically correct program with class and a method that has assembler code
//
// Result:
//      nothing
//
// History:
//      Created in 17/1/2022

class A {
    int assemble() asm (
        "
        ADD R0, R1
        BADINST R2, R0
        LOAD 1(GB), R0
        "
    );

}
